# QuantumDataAugmentation

./: .pre-commit-config.yaml  LICENSE  README.md  blur_transform.py  classical_training.py  myrtle_core.py  myrtle_torch_backend.py  pyproject.toml  quantum_blur.py  requirements.txt
data_augmentation/: blur_transform.py  classical_training.py  ml_training.py  myrtle_core.py  myrtle_torch_backend.py  plots.py  quantum_blur.py  quick_start.ipynb
experiment_runs/: cutout_8x8_0.csv  cutout_8x8_1.csv  cutout_8x8_2.csv  gaussian_blur_8x8_0.csv  gaussian_blur_8x8_1.csv  gaussian_blur_8x8_2.csv  id_0.csv  id_1.csv  id_2.csv  quantum_blur_3x3_0.1_0.csv  quantum_blur_3x3_0.1_1.csv  quantum_blur_3x3_0.1_2.csv  quantum_blur_3x3_0.2_0.csv  quantum_blur_3x3_0.2_1.csv  quantum_blur_3x3_0.2_2.csv  quantum_blur_3x3_0.5_0.csv  quantum_blur_3x3_0.5_1.csv  quantum_blur_3x3_0.5_2.csv  quantum_blur_4x4_0.2_0.csv  quantum_blur_4x4_0.2_1.csv  quantum_blur_4x4_0.2_2.csv  quantum_blur_6x6_0.5_0.csv  quantum_blur_6x6_0.5_1.csv  quantum_blur_6x6_0.5_2.csv  quantum_blur_8x8_0.1_0.csv  quantum_blur_8x8_0.1_1.csv  quantum_blur_8x8_0.1_2.csv
resource_estimation/: ml_training.py
