[tool.poetry]
name = "quantumdataaugmentation"
version = "0.1.0"
description = "Data augmentation techniques for images"
authors = ["josephtedds <joseph@tedds.co.uk>"]
license = "APACHE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
qiskit = "0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
