[tool.poetry]
name = "quantumdataaugmentation"
version = "0.1.0"
description = "Data augmentation techniques for images"
authors = ["josephtedds <joseph@tedds.co.uk>"]
license = "APACHE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
qiskit = "0.40"
seaborn = "^0.12.2"
ipykernel = "^6.21.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 72

[tool.black]
line-length = 79

[tool.flakeheaven]
max-doc-length = 72
max-line-length = 79
format = "grouped"

[tool.flakeheaven.plugins]
pycodestyle = ["+*","-E203","-W503"]
pyflakes = ["+*"]

[tool.pydocstyle]
convention = "numpy"
